Support for BC/Sun JUnit testing